force-app/main/default/objects/Google_API__mdt/Google_API__mdt.object-meta.xml
<CustomObject>
    <label>Google API</label>
    <pluralLabel>Google APIs</pluralLabel>
</CustomObject>