force-app/main/default/objects/Google_API__mdt/fields/Auth_Scope__c.field-meta.xml
<CustomField>
    <fullName>Auth_Scope__c</fullName>
    <label>Auth Scope</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>