force-app/main/default/objects/Google_API__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID for Google Cloud App</description>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>